[gd_scene load_steps=3 format=3 uid="uid://title_scene"]

[ext_resource type="PackedScene" path="res://ui/PartyPanel.tscn" id="1"]
[ext_resource type="Script" path="res://scenes/Title.gd" id="2"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="PartyPanel" parent="." instance=ExtResource("1")]
layout_mode = 1
anchors_preset = 0
anchor_right = 1.0

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
horizontal_alignment = 1
text = "Command Rogue RPG"

[node name="StartButton" type="Button" parent="VBox"]
layout_mode = 2
text = "New Run"

[node name="Ascension" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="AscensionLabel" type="Label" parent="VBox/Ascension"]
layout_mode = 2
text = "Ascension"

[node name="AscensionSpin" type="SpinBox" parent="VBox/Ascension"]
layout_mode = 2
min_value = 0.0
max_value = 20.0
step = 1.0
value = 0.0

[node name="Seed" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="SeedLabel" type="Label" parent="VBox/Seed"]
layout_mode = 2
text = "Seed"

[node name="SeedLine" type="LineEdit" parent="VBox/Seed"]
layout_mode = 2
placeholder_text = "Leave empty for random"

[node name="ContinueButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Continue"
